--- a/Half-Precision-Training/Pytorch_amp.ipynb
+++ b/Half-Precision-Training/Pytorch_amp.ipynb
@@ -2,10 +2,211 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "import torch\n",
+    "from tqdm import tqdm\n",
+    "from torchvision import datasets, transforms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.backends.cudnn.benchmark = True\n",
+    "torch.backends.cudnn.deterministic = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download resnet 100 and put in gpu\n",
+    "model = torch.hub.load('pytorch/vision:v0.6.0', 'resnet101', pretrained=False)\n",
+    "# Replace last layer with 10 nodes\n",
+    "model.fc = torch.nn.Linear(2048, 10)\n",
+    "\n",
+    "# Put model in gpu\n",
+    "model = model.cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download cifar 10 dataset\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
+    "])\n",
+    "\n",
+    "trainset = datasets.CIFAR10(\n",
+    "    root='./data', train=True, download=True, transform=transform)\n",
+    "testset = datasets.CIFAR10(root='./data', train=False,\n",
+    "                           download=True, transform=transform)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainloader = torch.utils.data.DataLoader(\n",
+    "    trainset, batch_size=64, shuffle=True, num_workers=1)\n",
+    "\n",
+    "testloader = torch.utils.data.DataLoader(\n",
+    "    testset, batch_size=64, shuffle=False, num_workers=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "criterion = torch.nn.CrossEntropyLoss()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Acc before training\n",
+    "\n",
+    "model.eval()\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "with torch.no_grad():\n",
+    "    with tqdm(testloader, unit=\"batch\") as t2epoch:\n",
+    "        for data, target in t2epoch:\n",
+    "            t2epoch.set_description(\"Test\")\n",
+    "            data, target = data.cuda(), target.cuda()\n",
+    "            output = model(data)\n",
+    "            _, predicted = torch.max(output.data, 1)\n",
+    "            total += target.size(0)\n",
+    "            correct += (predicted == target).sum().item()\n",
+    "            t2epoch.set_postfix(Accuracy=(100 * correct / total))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train\n",
+    "for epoch in range(10):\n",
+    "    with tqdm(trainloader, unit=\"batch\") as tepoch:\n",
+    "        for data, target in tepoch:\n",
+    "            tepoch.set_description(f\"Epoch {epoch}\")\n",
+    "            data, target = data.cuda(), target.cuda()\n",
+    "            optimizer.zero_grad()\n",
+    "            with torch.cuda.amp.autocast():\n",
+    "                output = model(data)\n",
+    "                loss = criterion(output, target)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            tepoch.set_postfix(loss=loss.item())\n",
+    "\n",
+    "    # Test\n",
+    "    model.eval()\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    with torch.no_grad():\n",
+    "        with tqdm(testloader, unit=\"batch\") as t2epoch:\n",
+    "            for data, target in t2epoch:\n",
+    "                t2epoch.set_description(f\"Epoch {epoch}\")\n",
+    "                data, target = data.cuda(), target.cuda()\n",
+    "                output = model(data)\n",
+    "                _, predicted = torch.max(output.data, 1)\n",
+    "                total += target.size(0)\n",
+    "                correct += (predicted == target).sum().item()\n",
+    "                t2epoch.set_postfix(Accuracy=(100 * correct / total))\n",
+    "\n",
+    "    print(\" \")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#redefine model\n",
+    "model = torch.hub.load('pytorch/vision:v0.6.0', 'resnet101', pretrained=False)\n",
+    "model.fc = torch.nn.Linear(2048, 10)\n",
+    "model = model.cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = torch.cuda.amp.GradScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train\n",
+    "for epoch in range(1,11):\n",
+    "    model.train()\n",
+    "    with tqdm(trainloader, unit=\"batch\") as tepoch:\n",
+    "        for data, target in tepoch:\n",
+    "            tepoch.set_description(f\"Epoch {epoch}\")\n",
+    "            data, target = data.cuda(), target.cuda()\n",
+    "            optimizer.zero_grad()\n",
+    "            with torch.cuda.amp.autocast():\n",
+    "                output = model(data)\n",
+    "                loss = criterion(output, target)\n",
+    "            scaler.scale(loss).backward()\n",
+    "            scaler.step(optimizer)\n",
+    "            scaler.update()\n",
+    "            tepoch.set_postfix(loss=loss.item())\n",
+    "\n",
+    "    # Test\n",
+    "    model.eval()\n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    with torch.no_grad():\n",
+    "        with tqdm(testloader, unit=\"batch\") as t2epoch:\n",
+    "            for data, target in t2epoch:\n",
+    "                t2epoch.set_description(f\"Epoch {epoch}\")\n",
+    "                with torch.cuda.amp.autocast():\n",
+    "                    data, target = data.cuda(), target.cuda()\n",
+    "                    output = model(data)\n",
+    "                    _, predicted = torch.max(output.data, 1)\n",
+    "                    total += target.size(0)\n",
+    "                    correct += (predicted == target).sum().item()\n",
+    "                t2epoch.set_postfix(Accuracy=(100 * correct / total))\n",
+    "\n",
+    "    print(\" \")\n"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +216,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.13"
   },
   "orig_nbformat": 4,
